# 6.NLP

./: README.md  pyproject.toml
1.Embeddings/: NLP_seminar_week_1.ipynb
2.Classification/: NLP_seminar_week_2.ipynb
3.Seq2seq/: NLP_seminar_week_3.ipynb
4.Transformers/: HSE_NLP_seminar_4.ipynb
6_nlp/ht1/: NLP_hw_week_2.ipynb  ht1.ipynb
