[tool.poetry]
name = "6-nlp"
version = "0.1.0"
description = ""
authors = ["Залесинский Роман Александрович <zalesinskiy@megamarket.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.9.1"
gensim = "^4.3.3"
numpy = "1.26.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
